# qp_to_lsp

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE
bazel/rules/: artifactory.bzl
bazel/rules/licenses/: licenses.bzl
lsp/: BUILD  defintions.h  elden_regularizer_bidiag_solver.hpp  regularized_least_squares_solver.cpp  regularized_least_squares_solver.h
lsp/test/: benchmark_test.cpp  solver_fixture.hpp  unit_test.cpp
qp_solver/: BUILD  projected_dual_qp_solver.hpp
qp_solver/test/: test_qp_solver.cpp
